feat: observe Git activity with Pact Node
